Fix alignment for left-aligned selected icon
Toggling the icon opacity rather than the presence of the icon itself
produces the desired alignment for both selected an unselected options.

--- a/packages/components/src/mobile/link-settings/style.native.scss
+++ b/packages/components/src/mobile/link-settings/style.native.scss
@@ -7,3 +7,7 @@
 .placeholderColor {
 	color: #87a6bc;
 }
+
+.unselectedOptionIcon {
+	opacity: 0;
+}
